@@ -22,7 +22,7 @@
 #include "reslib.h"
 
 extern void *LoadCodeResFile (const char *pStr);
-extern BOOLEAN InstallCodeResType (COUNT code_type);
+extern BOOLEAN InstallCodeResType (void);
 extern void *LoadCodeResInstance (RESOURCE res);
 extern void *CaptureCodeRes (void *hCode, void *pData, void **ppLocData);
 extern void *ReleaseCodeRes (void *CodeRef);
