@@ -23,7 +23,8 @@
 #include "reslib.h"
 #include "index.h"
 
-void *loadResourceDesc (RESOURCE_INDEX idx, ResourceDesc *desc);
+ResourceDesc *lookupResourceDesc (RESOURCE_INDEX idx, RESOURCE res);
+void *loadResourceDesc (ResourceDesc *desc);
 void *loadResource(const char *path, ResourceLoadFun *loadFun);
 
 void _set_current_index_header (RESOURCE_INDEX newResourceIndex);
