@@ -19,10 +19,10 @@
 #include "strintrn.h"
 
 BOOLEAN
-InstallStringTableResType (COUNT string_type, COUNT bin_type)
+InstallStringTableResType (void)
 {
-	InstallResTypeVectors (string_type, _GetStringData, FreeResourceData);
-	InstallResTypeVectors (bin_type, _GetBinaryTableData, FreeResourceData);
+	InstallResTypeVectors ("STRTAB", _GetStringData, FreeResourceData);
+	InstallResTypeVectors ("BINTAB", _GetBinaryTableData, FreeResourceData);
 	return TRUE;
 }
 
